--- a/home/modules/assets/.config/hypr/hyprland.conf
+++ b/home/modules/assets/.config/hypr/hyprland.conf
@@ -207,10 +207,11 @@ input {
     }
 }
 
+# note: disabled following migration to 25.11 this was no longer recognized as valid option
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+#gestures {
+#    workspace_swipe = false
+#}
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
